--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.14.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
